--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "heroku": "^7.47.7",
     "nodemon": "^2.0.7"
   }
 }
